add swagger-ui, document rest methods, validation, and fix date format

--- a/backend-tech-assessment-standard/src/main/resources/application.yml
+++ b/backend-tech-assessment-standard/src/main/resources/application.yml
@@ -22,3 +22,10 @@ spring:
       settings:
         trace: false
         web-allow-others: false
+server:
+  tomcat:
+    basedir: target/tomcat
+    accesslog:
+      enabled: true
+      pattern: "%h %u %t \"%r\" %s %b"
+      
