--- a/backend-tech-assessment-standard/pom.xml
+++ b/backend-tech-assessment-standard/pom.xml
@@ -57,7 +57,10 @@
             <artifactId>modelmapper</artifactId>
             <version>1.1.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
